fix pricing pages to all look and align the same

--- a/website/static/css/custom_css/index.css
+++ b/website/static/css/custom_css/index.css
@@ -258,10 +258,13 @@
   height: 450px;
 }
 .custom-height-6 {
-  height: 225px;
+  height: 250px;
 }
 .custom-height-7 {
   height: 25px;
+}
+.custom-height-8 {
+  height: 300px;
 }
 .custom-min-height-1 {
   min-height: 350px;
